# CppCon2024_StdFn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/: Holder.h  InstrumentedClass.h  MemoryManager.h  MoveWrapper.h  TaskQueue.h  TupleConvertor.h  function_traits.h
src/: CMakeLists.txt  InstrumentedClass.cpp  MemoryManager.cpp  TaskQueue.cpp
tests/: CMakeLists.txt  ConditionalStream.cpp  ConditionalStream.h  testCompareConstructs.cpp  testFreeFunction.cpp  testFunctionTraits.cpp  testInstrumentedClass.cpp  testLambda.cpp  testLambdaUsage.cpp  testMemoryManager.cpp  testPackingSolution.cpp  testStdFnFromLambda.cpp  testTaskQueue.cpp  utils.h
